# KecerdasanBuatan-AI

./: README.md
Pertemuan1-BLSTM/: Contoh tensorflow.ipynb  Dasar Python.ipynb  Python sintax dasar.ipynb  README.md  Sintaks dasar python.ipynb
Pertemuan2-Hyperparameter/: README.md
Pertemuan2-Hyperparameter/nlp-ai - gce/: preprocessing.py  testing.py  testing2.py  training.py
Pertemuan2-Hyperparameter/nlp-ai - gce/dataset/: clean_qa.txt  clean_qa2.txt  qa_gce.csv
Pertemuan2-Hyperparameter/nlp-ai - gce/iteung/: reply.py
Pertemuan2-Hyperparameter/nlp-ai - gce/output_dir2/: config.json  tokenizer.pickle  val.csv
Pertemuan3/: README.md
Pertemuan3/PengenalanModelBahasaBesar/: No1.md  No2.md  readme.md
Pertemuan3/PenguasaanHugginFace/: readme.md
Pertemuan3/PenguasaanHugginFace/No2/phi/: Cargo.toml
Pertemuan3/PenguasaanHugginFace/No3/rwkv/: Cargo.toml
Pertemuan3/PenguasaanHugginFace/No3/rwkv/src/: main.rs
Pertemuan3/PenguasaanHugginFace/No5/: readme.md
Pertemuan3/PenguasaanRust/: readme.md
Pertemuan3/PenguasaanRust/No1/01/: hello.rs  readme.md
Pertemuan3/PenguasaanRust/No1/02/: hour2.rs  readme.md
Pertemuan3/PenguasaanRust/No1/03/: hour3.rs  readme.md
Pertemuan3/PenguasaanRust/No1/04/: forStatement.rs  ifElseStatement.rs  ifStatement.rs  letIfStatement.rs  loopBreakStatement.rs  match.rs  readme.md  (+2 more)
Pertemuan3/PenguasaanRust/No3/: no3.rs  readme.md
Pertemuan3/PenguasaanRust/No4/: helper.rs  main.rs  readme.md
Pertemuan3/PenguasaanRust/No5/: readme.md
Pertemuan3/PenguasaanRust/No6/: readme.md
Pertemuan3/PenguasaanRust/No7/: readme.md
(+49 files in other folders)
